# fastapi-video

./: .gitignore  README.md  main.py  pyproject.toml
templates/: index.htm
