[tool.poetry]
name = "fastapi-video"
version = "0.1.0"
description = ""
authors = ["Petr Stribny <petrstribny@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.11.5"
jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
